# youtubesummary

./: .dockerignore  Dockerfile  LICENSE  README.md  TEST.md  mcp_wrapper.py  pyproject.toml  requirements.txt  test_mcp.sh  transcript.md
src/youtubesummary/: __init__.py  youtube_summary.py
