[project]
name = "youtubesummary"
version = "0.1.0"
description = "YouTube transcript downloader and AI-powered summarizer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "youtube-transcript-api>=0.6.3",
    "litellm>=1.40.16"
]

[project.scripts]
youtube-summary = "youtubesummary.youtube_summary:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
